--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Work+Sans:700&display=swap');
+    </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Alegreya&display=swap');
+    </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Big+Shoulders+Text:900&display=swap');
+    </style>
     <script src="p5.min.js"></script>
     <!-- <script src="addons/p5.sound.min.js"></script> -->
+    <script src="addons/p5.geolocation.js"></script>
+    <script src="https://unpkg.com/mappa-mundi/dist/mappa.js" type="text/javascript"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
